app/styles/tailwind.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: 'Ubuntu', sans-serif;
}

h1, h2, h3 {
  font-family: 'Ubuntu', sans-serif;
}

.search-container {
  position: relative;
  width: 300px;
}

#search-input {
  width: 100%;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 10px;
}

#suggestions-container {
  position: absolute;
  width: 100%;
  overflow-y: auto;
  border-top: none;
  border-radius: 0 0 5px 5px;
  background-color: #fff;
}

#search-results li {
  padding: 2rem;
}

.primary-search > svg {
  height: 100%;
  margin: auto 10px;
  position: absolute;
}

.card-wrapper .MuiSvgIcon-root {
  font-size: 50px;
}

.card-wrapper li {
  background-color: #f6f6f6;
  padding: 2.5rem 2rem;
}

#search-results h3 {
  font-size: 22px;
}

#logo {
  display: flex;
  align-items: center;
}

button#demo-customized-button {
  height: 100%;
}

#logo:hover {
  cursor: pointer;
}

#logo h1 {
  display: inline-block;
}

#logo {
  display: inline-block;
  width: 42px;
  margin: 0 8px;
}

.stretched-link::after {
  content: "";
  @apply z-10 absolute inset-0 bg-transparent pointer-events-auto;
}

.cover-wrapper img {
  width: 100%;
  height: 100%;
  max-height: 330px;
  object-fit: cover;
}

#intro {
  text-align: center;
  margin-top: 4rem;
}

.intro-wrapper {
  margin: 0 auto;
}

.primary-search {
  display: flex;
  position: relative;
}

.primary-search input {
  background: transparent;
}

.primary-search button {
  padding: 0 15px;
}

.no-cover h3 {
  font-size: 25px;
}

.search-results {
  margin-bottom: 3rem;
}

.button-group {
  margin-top: 2rem;
  padding: 0 1rem;
}

.search-results li {
  margin: 3rem 0;
}

#search-container {
  position: relative;
  padding-bottom: 6rem;
 }

#book-details {
  position: relative;
}

#book-details .book-cover {
  position: sticky;
  top: 4rem;
}

.book-cover img {
  width: 100%;
  height: auto;
}

.summary {
  white-space: pre-wrap;
}

